gRPC API for dataservice

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,4 @@ services/trainingservice/.idea/misc.xml
 services/trainingservice/.idea/modules.xml
 services/trainingservice/.idea/trainingservice.iml
 services/trainingservice/.idea/vcs.xml
+services/dataservice/.idea/vcs.xml
