Data service setup

--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,4 @@ services/trainingservice/.idea/vcs.xml
 services/dataservice/.idea/vcs.xml
 engine/.idea/misc.xml
 engine/.idea/vcs.xml
+services/dataservice/.idea/misc.xml
