--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,5 @@ services/dataservice/.idea/vcs.xml
 engine/.idea/misc.xml
 engine/.idea/vcs.xml
 services/dataservice/.idea/misc.xml
+services/servingservice/.idea/misc.xml
+services/servingservice/.idea/vcs.xml
