Event handler structure change

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,9 @@ event-handler/.idea/inspectionProfiles/Project_Default.xml
 event-handler/.idea/misc.xml
 event-handler/.idea/modules.xml
 event-handler/.idea/vcs.xml
+eventhandler/.idea/eventhandler.iml
+eventhandler/.idea/inspectionProfiles/profiles_settings.xml
+eventhandler/.idea/inspectionProfiles/Project_Default.xml
+eventhandler/.idea/misc.xml
+eventhandler/.idea/modules.xml
+eventhandler/.idea/vcs.xml
