--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,15 @@ eventhandler/.idea/inspectionProfiles/Project_Default.xml
 eventhandler/.idea/misc.xml
 eventhandler/.idea/modules.xml
 eventhandler/.idea/vcs.xml
+skipper-lib-test/.idea/inspectionProfiles/profiles_settings.xml
+skipper-lib-test/.idea/inspectionProfiles/Project_Default.xml
+skipper-lib-test/.idea/misc.xml
+skipper-lib-test/.idea/modules.xml
+skipper-lib-test/.idea/skipper-lib-test.iml
+skipper-lib-test/.idea/vcs.xml
+skipper-lib/.idea/inspectionProfiles/profiles_settings.xml
+skipper-lib/.idea/inspectionProfiles/Project_Default.xml
+skipper-lib/.idea/misc.xml
+skipper-lib/.idea/modules.xml
+skipper-lib/.idea/skipper-lib.iml
+skipper-lib/.idea/vcs.xml
