Renamed engine to api

--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,10 @@ skipper-lib/.idea/misc.xml
 skipper-lib/.idea/modules.xml
 skipper-lib/.idea/skipper-lib.iml
 skipper-lib/.idea/vcs.xml
+api/.idea/api.iml
+api/.idea/inspectionProfiles/profiles_settings.xml
+api/.idea/inspectionProfiles/Project_Default.xml
+api/.idea/misc.xml
+api/.idea/modules.xml
+api/.idea/vcs.xml
+api/.idea/workspace.xml
