--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,9 @@ api/.idea/misc.xml
 api/.idea/modules.xml
 api/.idea/vcs.xml
 api/.idea/workspace.xml
+workflow/.idea/inspectionProfiles/profiles_settings.xml
+workflow/.idea/inspectionProfiles/Project_Default.xml
+workflow/.idea/misc.xml
+workflow/.idea/modules.xml
+workflow/.idea/vcs.xml
+workflow/.idea/workflow.iml
