Logging service implementation

--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,9 @@ workflow/.idea/misc.xml
 workflow/.idea/modules.xml
 workflow/.idea/vcs.xml
 workflow/.idea/workflow.iml
+logger/.idea/inspectionProfiles/profiles_settings.xml
+logger/.idea/inspectionProfiles/Project_Default.xml
+logger/.idea/logger.iml
+logger/.idea/misc.xml
+logger/.idea/modules.xml
+logger/.idea/vcs.xml
