--- a/skipper-lib/pyproject.toml
+++ b/skipper-lib/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "skipper-lib"
-version = "1.0.0"
+version = "1.1.2"
 description = "Simple and flexible ML workflow engine"
 authors = ["Andrej Baranovskij <andrejus.baranovskis@gmail.com>"]
 # New attributes
@@ -22,6 +22,7 @@ include = [
 [tool.poetry.dependencies]
 python = "^3.7"
 pika = "^1.2.0"
+requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
