--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,18 @@ services:
       - network1
     restart: always
 
+  logger:
+    image: katanaml/skipper-logger
+    build:
+      context: ./logger
+      dockerfile: Dockerfile
+    container_name: skipper-logger
+    ports:
+      - 5001:5001
+    command: uvicorn endpoint:app --port=5001 --host 0.0.0.0
+    networks:
+      - network1
+
 networks:
   network1:
     name: katana-network
