--- a/workflow/Dockerfile
+++ b/workflow/Dockerfile
@@ -5,3 +5,7 @@ COPY . .
 
 RUN pip install -r requirements.txt \
     && rm -rf /root/.cache/pip
+
+EXPOSE 5000
+
+ENTRYPOINT ["uvicorn", "endpoint:app", "--port=5000", "--host", "0.0.0.0"]
