Minor fixes for Serving service dockerfile

--- a/services/servingservice/Dockerfile
+++ b/services/servingservice/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /usr/src/servingservice
 COPY . .
 
 RUN pip install -r requirements.txt \
-    && rm -rf /root/.cache/pip \
+    && rm -rf /root/.cache/pip
 
 ENTRYPOINT ["python", "main.py"]
