Fix for Docker layers

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,9 +1,12 @@
 FROM python:3.7-slim
 
 WORKDIR /usr/src/api
-COPY . .
+
+COPY requirements.txt ./
 
 RUN pip install -r requirements.txt \
     && rm -rf /root/.cache/pip
+
+COPY . .
 
 EXPOSE 8000
