--- a/services/dataservice/Dockerfile
+++ b/services/dataservice/Dockerfile
@@ -1,9 +1,12 @@
 FROM python:3.7-slim
 
 WORKDIR /usr/src/dataservice
-COPY . .
+
+COPY requirements.txt ./
 
 RUN pip install -r requirements.txt \
     && rm -rf /root/.cache/pip
+
+COPY . .
 
 ENTRYPOINT ["python", "main.py"]
