--- a/workflow/Dockerfile
+++ b/workflow/Dockerfile
@@ -1,10 +1,13 @@
 FROM python:3.7-slim
 
 WORKDIR /usr/src/workflow
-COPY . .
+
+COPY requirements.txt ./
 
 RUN pip install -r requirements.txt \
     && rm -rf /root/.cache/pip
+
+COPY . .
 
 EXPOSE 5000
 
