Kubernetes support for API and added secret for RabbitMQ

--- a/rabbitmq/rabbit-secret.yaml
+++ b/rabbitmq/rabbit-secret.yaml
@@ -6,3 +6,5 @@ type: Opaque
 data:
   # echo -n "cookie-value" | base64
   RABBITMQ_ERLANG_COOKIE: Y29va2llLXZhbHVl
+  RABBITMQ_USER: c2tpcHBlcg==
+  RABBITMQ_PASSWORD: d2VsY29tZTE=
