--- a/api/api-celery-pod.yaml
+++ b/api/api-celery-pod.yaml
@@ -29,6 +29,7 @@ kind: Deployment
 metadata:
   name: skipper-api-celery
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: skipper-api-celery
