--- a/workflow/workflow-pod.yaml
+++ b/workflow/workflow-pod.yaml
@@ -14,6 +14,7 @@ kind: Deployment
 metadata:
   name: skipper-workflow
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: skipper-workflow
