--- a/services/trainingservice/trainingservice-pv.yaml
+++ b/services/trainingservice/trainingservice-pv.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   #kubectl get storageclass
   storageClassName: hostpath
+  persistentVolumeReclaimPolicy: Delete
   capacity:
     storage: 1Gi
   accessModes:
