--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,6 +7,7 @@ COPY requirements.txt ./
 RUN pip install -r requirements.txt \
     && rm -rf /root/.cache/pip
 
+# let us use hot reload instead ?
 COPY . .
 
 EXPOSE 8000
