label studio and vols

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# volumes
+volumes/label-studio/data/export
+volumes/label-studio/data/media
+volumes/label-studio/data/label_studio.sqlite3
+
 # trained models during development
 services/models/
 
