--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.9'
 
+networks:
+  network1:
+    name: katana-network
+
 services:
   rabbitmq:
     image: katanaml/rabbitmq-service
@@ -11,9 +15,9 @@ services:
       - 5672:5672
       - 15672:15672
     volumes:
-      - ./backend-rabbitmq/etc/:/etc/backend/
-      - ./backend-rabbitmq/data/:/var/lib/backend/
-      - ./backend-rabbitmq/logs/:/var/log/backend/
+      - ./volumes/rabbitmq/etc/:/etc/backend/
+      - ./volumes/rabbitmq/data/:/var/lib/backend/
+      - ./volumes/rabbitmq/logs/:/var/log/backend/
     environment:
       - RABBITMQ_DEFAULT_USER=guest
       - RABBITMQ_DEFAULT_PASS=welcome1
@@ -92,7 +96,30 @@ services:
       - api
     restart: on-failure
 
+  label-studio:
+    image: heartexlabs/label-studio:1.3.0
+    container_name: label-studio
+    volumes:
+      - ./volumes/label-studio/data/:/label-studio/data:rw
+    ports:
+      - 8989:8080
+    networks:
+      - network1
+    restart: always
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./nginx_config.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - network1
+    depends_on:
+      - api
+
   # Sample set of services, you should replace with your own services
+  # use any new queue name in queue environment variables as long as producer and consumer names match. 
   data-service:
     image: katanaml/data-service
     build:
@@ -107,7 +134,7 @@ services:
       - RABBITMQ_PORT=5672
       - RABBITMQ_USER=skipper
       - RABBITMQ_PASSWORD=welcome1
-      - QUEUE_NAME=skipper_data
+      - QUEUE_NAME=skipper_data_custom_queue
       - SERVICE_NAME=data
       - STATS_FILE=/usr/src/dataservice/models/train_stats.csv
     networks:
@@ -133,7 +160,7 @@ services:
       - RABBITMQ_PASSWORD=welcome1
       - QUEUE_NAME=skipper_training
       - SERVICE_NAME=training
-      - QUEUE_NAME_DATA=skipper_data
+      - QUEUE_NAME_DATA=skipper_data_custom_queue
       - QUEUE_NAME_STORAGE=skipper_storage
       - MODELS_FOLDER=/usr/src/trainingservice/models/model_boston_
       - STATS_FILE=/usr/src/trainingservice/models/train_stats.csv
@@ -190,17 +217,3 @@ services:
     restart: on-failure
   # Sample set of services, you should replace with your own services
 
-  nginx:
-    image: nginx:latest
-    ports:
-      - "8080:8080"
-    volumes:
-      - ./nginx_config.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - network1
-    depends_on:
-      - api
-
-networks:
-  network1:
-    name: katana-network
