Add react frontend with hot reload (#7)
* small typo 😄 BTW - amazing work !!

* remove funding

* Delete skipper.png

* Delete oci-shell.png

* Delete oci-loadbalancer.png

* Rename README_SKIPPER.md to README-SKIPPER.md

* Create empty

* Add files via upload

* Create README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* update

* add scripts

* comments

* ignoring trained models

* custom queue name test

* label studio and vols

* label studio and vols

* basic

* basic

* basic

* basic

* add frontend with hot-reload

* uncommnet

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,20 @@ services:
     depends_on:
       - api
     restart: on-failure
+    
+  frontend:
+    image: thinking/frontend
+    container_name: frontend
+    build: 
+      context: ./frontend
+      dockerfile: Dockerfile
+    volumes:
+      - './frontend/app/:/usr/src/app'
+    ports:
+      - 3000:3000
+    stdin_open: true
+    working_dir: /usr/src/app
+    command: npm start
 
   label-studio:
     image: heartexlabs/label-studio:1.3.0
@@ -215,5 +229,3 @@ services:
     depends_on:
       - rabbitmq
     restart: on-failure
-  # Sample set of services, you should replace with your own services
-
