add backend container

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.7-slim
 
-WORKDIR /usr/src/api
+WORKDIR /usr/src/backend
 
 COPY requirements.txt ./
 
@@ -10,3 +10,6 @@ RUN pip install -r requirements.txt \
 COPY . .
 
 EXPOSE 8000
+
+
+ENTRYPOINT ["uvicorn", "main:app", "--port=9999", "--host", "0.0.0.0", "--reload"]
