--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,7 @@ logger/.idea/logger.iml
 logger/.idea/misc.xml
 logger/.idea/modules.xml
 logger/.idea/vcs.xml
+
+# Node.js
+
+services/mobilenetservice/node_modules/
