--- a/services/mobilenetservice/package.json
+++ b/services/mobilenetservice/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.8.0"
+    "amqplib": "^0.8.0",
+    "http": "^0.0.1-security"
   }
 }
