Node.js RabbitMQ event producer and minor fixes

--- a/services/trainingservice/trainingservice-pod.yaml
+++ b/services/trainingservice/trainingservice-pod.yaml
@@ -11,7 +11,7 @@ data:
   RABBITMQ_PORT: '5672'
   QUEUE_NAME: skipper_training
   SERVICE_NAME: training
-  QUEUE_NAME_SEND: skipper_data
+  QUEUE_NAME_DATA: skipper_data
   QUEUE_NAME_STORAGE: skipper_storage
   MODELS_FOLDER: /usr/src/trainingservice/models/model_boston_
   STATS_FILE: /usr/src/trainingservice/models/train_stats.csv
