--- a/services/mobilenetservice/package.json
+++ b/services/mobilenetservice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "helloservice",
+  "name": "mobilenetservice",
   "version": "1.0.0",
   "description": "Katana ML",
   "main": "index.js",
